# Deformers

./: .clang-format  .gitignore  CMakeLists.txt  README.md  shaderbuild.py  the-deformers.c
include/: map.h  pcx.h  t_camera.h  t_map.h  t_pcx.h  t_shaders.h  t_texture.h  texture.h
src/: main.c  map.c  t_camera.c  t_map.c  t_pcx.c  t_texture.c  texture.c
src/core/: camera.c  camera.h  car.c  car.h  config.c  config.h  debug.c  debug.h  map.c  map.h  pcx.c  pcx.h  shaders.h
src/core/shaders/: affine.fs  affine.vs
src/game/: game.c  game.h
tools/: shaderbuild.py
